--- a/playbooks/roles/mumble-server/tasks/main.yml
+++ b/playbooks/roles/mumble-server/tasks/main.yml
@@ -5,9 +5,16 @@
   apt:
     update_cache: yes
 
+- name: Update and upgrade apt packages
+  become: true
+  apt:
+    upgrade: yes
+    update_cache: yes
+    cache_valid_time: 86400 #One day
+
 - name: Install some prerequisites
   apt:
-    pkg: python-software-properties
+    pkg: python3-software-properties
     state: present
 
 - name: Add Mumble ppa
